# smart-trip

./: .gitignore  CMakeLists.txt  README.md  config.ini  create-package.sh  smart-trip.spec
CAPTGenerator/: CAPTGenerator.pro  captgenerator.cpp  captgenerator.h  cfunction.hpp  common.cpp  common.h  ontology  userrequest.cpp  userrequest.h
CAPTGenerator/terms/: lessthanpreferenceterm.cpp  lessthanpreferenceterm.h  lowestpreferenceterm.cpp  lowestpreferenceterm.h  paretocomposition.cpp  paretocomposition.h  pospreferenceterm.cpp  preferenceterm.cpp  preferenceterm.h
PQE/: PQE.pro  captgeneratordesc.h  generatorsubscriptionhandler.h  main.cpp  ontology  pendingrequest.cpp  pendingrequest.h  pqe.cpp  pqe.h  processedrequest.h
RestaurantGenerator/: RestaurantGenerator.pro  main.cpp  restorauntgenerator.cpp  restorauntgenerator.h
SmartTrip/: .gitignore  README.md
SmartTrip/app/: build.gradle  proguard-rules.pro
SmartTrip/app/src/main/: AndroidManifest.xml
SmartTrip/app/src/main/jni/: Android.mk  Smart.i  Smart_wrap.cxx  TestLib.i  ontology  smart.cpp  smart.h  test.cpp  test.h  util.c  util.h
SmartTrip/app/src/main/res/layout/: activity_main.xml  dialog_search.xml  (+1 more)
SmartTripAndroid/: build.gradle  settings.gradle
SmartTripAndroid/app/: build.gradle  proguard-rules.pro
SmartTripAndroid/app/proguard/: proguard-rx-java.pro
SmartTripAndroid/app/src/main/: AndroidManifest.xml
SmartTripAndroid/app/src/main/resources/: android-logger.properties
SmartTripAndroid/commondata/: build.gradle
SmartTripAndroid/commondata/src/main/: AndroidManifest.xml
SmartTripAndroid/gradle/wrapper/: gradle-wrapper.properties
SmartTripAndroid/smartslognative/: build.gradle  proguard-rules.pro
SmartTripAndroid/smartslognative/src/main/: AndroidManifest.xml
SmartTripAndroid/smartslognative/src/main/jni/: README.md  common  ontology  smartlognative.c  smarttrip.c  smarttrip.h  smarttripjni.c  st_movement.c  st_movement.h  st_point.c  st_point.h
TransportKP/: .gitignore  build.gradle  settings.gradle  transport-kp.spec
TransportKP/debian/: changelog
TransportKP/gradle/wrapper/: gradle-wrapper.properties
TransportKP/linux/: transport_kp
clean_kp/: CMakeLists.txt  main.c
common/: CMakeLists.txt  common.c  common.h  st_point.c  st_point.h
context-aware-kps/: smart-trip.pro
context-aware-kps/CAPTGenerator/: captgenerator_global.h  common.cpp  common.h  userrequest.cpp  userrequest.h
context-aware-kps/CAPTGenerator/terms/: attributepreferenceterm.cpp  attributepreferenceterm.h  betweenpreferenceterm.cpp  betweenpreferenceterm.h  lessthanpreferenceterm.cpp  lessthanpreferenceterm.h  pospreferenceterm.h  preferenceterm.cpp  prioritizedcomposition.cpp  prioritizedcomposition.h
context-aware-kps/PQE/: PQE.pro  captgeneratordesc.cpp  generatorsubscriptionhandler.cpp  gets.cpp  gets.h  pendingrequest.cpp  pendingrequest.h  placemark.cpp  placemark.h  pqe.cpp  pqe.h  processedrequest.cpp  requesthandler.cpp  requesthandler.h
context-aware-kps/RestaurantGenerator/: RestaurantGenerator.pro
context-aware-kps/restaurant-user-kp/: main.cpp  ontology  restaurant-user-kp.pro
debian/: changelog  control  copyright  geo-db-kp.install  geo-names-kp.install  geo-wm-kp.install  rules  smart-trip-config.install  smart-trip-core.dirs  smart-trip-core.install  time-plan-kp.install  time-review-kp.install  weather-kp.install
geo_common/: CMakeLists.txt  geo_common.c  geo_common.h  loader.c
geo_db_kp/: CMakeLists.txt  dbpedia-loader.h  geo-db-kp.service  main.c
geo_kp/: CMakeLists.txt  dbpedia-loader.c  loader.c  loader.h  main.c  test-loader.c  test-loader.h  wm-loader.c  wm-loader.h
geo_names_kp/: CMakeLists.txt  geo-names-kp.service  geonames-loader.c  geonames-loader.h  main.c
geo_wm_kp/: CMakeLists.txt  main.c  wm-loader.c
javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
javadoc/org/fruct/oss/tsp/: App.html  LocationTrackingService.html  package-frame.html  package-summary.html  package-tree.html
libraries/common/: st_point.h
libraries/geo_common/: CMakeLists.txt  geo_common.c  geo_common.h  loader.h
log_kp/: main.c
ontology/: .gitignore  CMakeLists.txt  etourism.owl  generate-ontology.sh  ontology.owl
ranking_distance_kp/: main.c
rating_kp/: CMakeLists.txt  main.c
restaurant-user-kp/: main.cpp  restaurant-user-kp.pro
scripts/: build_smart_trip.sh  install_dependencies_local.sh
search-kp/dbpedia-smartslog/: Makefile  answer.xml  dbpedia_sparql.c  readme
search-kp/dbpedia-smartslog/ontology/: etourism.c  etourism.c~  etourism.h
services/: CMakeLists.txt  README.md
services/geo_names_kp/: geonames-loader.c  geonames-loader.h  main.c
services/geo_wm_kp/: geo-wm-kp.service  main.c  wm-loader.h
services/ranking_distance_kp/: CMakeLists.txt  ranking-distance-kp.service
services/time_plan_kp/: CMakeLists.txt  main.c
services/time_review_kp/: CMakeLists.txt  time-review-kp.service
services/transport_kp/TransportKP/: create-package.sh
services/transport_kp/TransportKP/debian/: control  copyright  rules
services/transport_kp/TransportKP/gradle/wrapper/: gradle-wrapper.properties
services/transport_kp/TransportKP/linux/: transport-kp.service
services/transport_kp/transport-kp-native/: CMakeLists.txt  main.c
services/weather_kp/: CMakeLists.txt  main.c  weather-kp.service
test-transport-kp/: CMakeLists.txt  main.c
test/test_user_kp/: CMakeLists.txt  main.c
tests/clean_kp/: CMakeLists.txt
tests/dbpedia-search-kp/dbpedia-smartslog/: query.txt
tests/dbpedia-search-kp/dbpedia-smartslog/ontology/: etourism.owl
tests/log_kp/: CMakeLists.txt
tests/user_kp/: CMakeLists.txt  main.c
time_plan_kp/: CMakeLists.txt  main.c  time-plan-kp.service
time_review_kp/: CMakeLists.txt
transport-kp-native/: CMakeLists.txt  main.c
user_kp/: CMakeLists.txt  main.c
util/: list2gpx.py
util/scripts/: install_dependencies_local.sh  run_loop.sh  smartslog_cmake.patch
(+268 files in other folders)
